attempt to fix bugs on safari

--- a/css/style.css
+++ b/css/style.css
@@ -720,9 +720,6 @@ display:none;
     width: 70vw;
     height:auto;
   }
-  #homepage{
-    width:95.5vw;
-  }
   .top{
     padding-bottom:0px;
   }
